# BashVault

./: .env.example  .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  DEMO_CREDENTIALS.md  Dockerfile  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SECURITY_FIXES_REPORT.md  SECURITY_IMPROVEMENTS.md  app.py  argon2_key_derivation.sh  audit_log.sh  auto_fix.py  backup_integrity_check.sh  ci_agent.py  ci_integration.py  clipboard_util.sh  config.py  demo_advanced_features.py  deploy.sh  docker-compose.yml  encrypt_decrypt_aes256gcm.sh  infogather.db  migration_password_expiry.sql  models.py  nginx.conf  pentester.py  pyproject.toml  pytest.ini  replit.md  requirements.txt  requirements_backup.txt  requirements_fixed.txt  schemas.py  security.py  threat_monitor.db  (+3 more)
.github/workflows/: cd.yml  ci.yml  replit-deploy.yml  security.yml
attached_assets/: Pasted-14-potential-vulnerabilities-found-Last-ran-on-2-34-pm-Jun-10-2025-Detected-potential-vulne-1749530108280_1749530108281.txt  Pasted-Great-Here-s-what-I-ll-generate-for-you-top-to-bottom-as-per-your-checklist-1-Bash-prototy-1749529487440_1749529487440.txt  Pasted-Here-s-a-full-patch-ready-diff-and-explanation-for-both-files-based-on-your-codebase-structure--1749529739182_1749529739183.txt  content-1749551876649.md
codeql_rules/: dependency_confusion.ql  poisoned_model_loading.ql
modules/: __init__.py  advanced_dns.py  cloud_discovery.py  codeql_analyzer.py  dns_enum.py  network_scanner.py  report_generator.py  social_engineer.py  ssl_analyzer.py  threat_monitor.py  vulnerability_scanner.py  whois_lookup.py
scripts/: setup.sh
security_scripts/: README.md  argon2_key_derivation.sh  audit_log.sh  backup_integrity_check.sh  clipboard_util.sh  encrypt_decrypt_aes256gcm.sh  migration_password_expiry.sql
static/css/: dashboard.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  history.html  login.html  monitoring.html  report_template.html  results.html  scan.html
tests/: test_modules.py  test_pentester.py  test_performance.py  test_schemas.py  test_security.py  test_thread_safety.py  test_web_dashboard.py
utils/: __init__.py  network_utils.py  validation.py
